# Qwirkle

./: CMakeLists.txt  GameEngine.cpp  GameEngine.h  LinkedList.cpp  LinkedList.h  Makefile  Node.cpp  Node.h  Player.cpp  Player.h  Position.cpp  Position.h  README.md  Report 2.pages  Report.docx  Tile.cpp  Tile.h  getline.cpp  getline.h  qwirkle  qwirkle.cpp
tests/: board.input  board.output  board.save  gameOver.input  gameOver.output  gameOver.save  morePlayers.input  morePlayers.output  morePlayers.save  placeTile1.input  placeTile1.output  placeTile1.save  placeTile2.input  placeTile2.output  placeTile2.save  placeTile3.input  placeTile3.output  placeTile3.save  replaceTile.input  replaceTile.input.txt  replaceTile.output  replaceTile.output.txt  replaceTile.save  replaceTile.save.txt  saveTemplate.save  stalemate.input  stalemate.output  stalemate.save  test1.gameout  test1.input  test1.output  test1.save  test2.input  test2.output  test2.save  test2sample.save  test3.input  test3.output  test3.save
tests/loadGame/: loadGame.input  loadGame.output  loadGame0.save  loadGame1.save  loadGame10.save  loadGame2.save  loadGame3.save  loadGame4.save  loadGame5.save  loadGame6.save  loadGame7.save  loadGame8.save  loadGame9.save
